# esp-idf-net-logging

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sse-client.py
.github/workflows/: compile-examples-idf-matrix.yml-disabled  compile-examples-idf.yml  compile-examples-idf44.yml  compile-examples-idf50.yml  workflow-compile-idf.yml
cmake/: include.cmake
examples/: README.md
examples/basic/: CMakeLists.txt  README.md
examples/basic/main/: Kconfig.projbuild  netlogging_basic_example_main.c
examples/mqtt_pub/: Kconfig.projbuild
examples/mqtt_pub/include/: net_logging_mqtt_client.h
examples/sse_server/: CMakeLists.txt  README.md  sdkconfig.defaults  sse-client.py
examples/sse_server/main/: CMakeLists.txt  Kconfig.projbuild  netlogging_sse_server_example_main.c
examples/sse_server/www/: index.html
examples/uart_select/: CMakeLists.txt  README.md
examples/uart_select/main/: CMakeLists.txt  uart_select_example_main.c
include/: net_logging.h
src/: http_client.c  mqtt_pub.c  multicast_log_sender.c  net_logging.c  net_logging_priv.h  sse_server.c  tcp_client.c  udp_client.c
src/assets/: sse.html
src/builtin_client/: http_client.c  multicast_log_sender.c
src/builtin_sse_server/: sse_server.c
tools/: compress_assets.py
